--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "eslint-plugin-flowtype": "^8.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
